--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XOEbTJUKK2YZD+AYKuPtlfTR4sxythPYWfa4elL0etufSYuHBakdndrumHVKWtRxb6QI5IEeJ1gu4X/Tix0XUdvMEX1AePoobgC6Hyk/qmxoZBFAFoBHbdWoL986lFDs">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HcWNBsrLa6DC7zDnYAd0VRYvu2YwM4ShNuwRF8anyS5erX1KGQ935c3hioWP7d7R/4fUh/HrM/X0w/joYGuIDDMmCbuxLPSvGja8y9CI+Bf3LquNzKx49uuelGILHp7D">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
