--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nMa+DkqImKeAJNu1DjD8KxevEHQeMZv9aiW5ZrIacbAoIRjEcBTzx/dPfX/BtNMTT/S/0bMTffeyhQXrhztBZgTho11A861m2doDDP4a/oCUWayI7v21DUXjts5/xO0W">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PlHNnNKDicHtf1e0k4sJG5U217UjHks+iLSsXf1bSr2NSyK/4+JMSM46lx3x1Q4zexdvByW5LnyLucW/X5SMaEW92NbEYl2+23ooELAzejIHUo41YYlcpuS1TePg2kGr">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
