--- a/tiffany.html
+++ b/tiffany.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pVcqeSyXAMDvLki99qRbk2ain7AORsJN4ZGu5GeTRFKZJXVGVZ+1LB5ShyTPQQn1q+S0LVBG9oC/J5WKiKxq6NGiGGnrZOXTDaOqABggRkVqnJqy3XZXGBTxRf0KAGVE">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yfaVl3x/Tr4qiF74nJleJWhUfzFgDv6px4TDHMp2RLCkS2aWtBZ+8y6M8LfoWZVugqqB1SQiU3K+9izaWHzl/GxylEqTX6G3lE/aRZZf+XZlTPYHM4WgToVziTho6p7l">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
