--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qUyuE0SC4XzOOqgn9fHbGgsSAGsaFrAh4ZGQra/u5xG/Uao+ZFbEhly0hpapjORZuXNWVNtvu8RF8zoYzknAM12A92oDHIiWGNQHFBnDQiLaWKYIKAhZtcv6YU3js5zs">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="109cq8FIMc3CR840HjWrsC82/z5AYPOWVu5Yo4iVGDtF6EED3Pyptls/EVY4CXt6NIiMJwYjoXS1GR7Be8wLusmIoSMkho2Zutih0jOoD3SEJMSwBTl00JKEE2p/sC/l">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
