create github pages

--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="109cq8FIMc3CR840HjWrsC82/z5AYPOWVu5Yo4iVGDtF6EED3Pyptls/EVY4CXt6NIiMJwYjoXS1GR7Be8wLusmIoSMkho2Zutih0jOoD3SEJMSwBTl00JKEE2p/sC/l">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gEjJJ9NHbuCug7zbF8d1hKQL9aZjAjFvNl+2hXU1gSb79buOakHv8oNgZd9V2PqU4ziAxal/c+uG8Ri4bUF7KJBTXcc8qKNrPp4z5FbsIRaMGLefUyf7cIzCjRb99xUH">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -199,7 +199,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2019 - Barrett Insurance - All Rights Reserved
+                    © Copyright 2020 - Barrett Insurance - All Rights Reserved
                 </p>
             </div>
         </div>
