--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="axvMtlUKqz0y/s+tj7nMPHTEQ/4XobwDsl8Gb2HEPJCZShh2ZS94UL+1eUomUEHA+6cVmxZimb7Bl5ZUPy9ERBNBU32EKEGMxLB6QLXqmRA1znQVKPWS7KqsUFLiNFIH">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gTl7GVL9u9nFXhW6QAM01nY1vq04n/Cgot0orOmx3uH76cOj2jvA4O7WwsiKB4pDglJdS/8ctQGydIcS8VNsDGOf/QI4AiJuyuidPpnXn6Ox/PN99B+ReLpyxaLvMQya">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -199,7 +199,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2019 - Barrett Insurance - All Rights Reserved
+                    © Copyright 2020 - Barrett Insurance - All Rights Reserved
                 </p>
             </div>
         </div>
