--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -125,7 +125,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
             <div class="col-md-6">
                 
@@ -141,7 +141,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hEkHo6br+T137xzIauyT4VPBfiskt/lObQx8eNO8fKQKS0UZB3USmmN2QMNSN0yy47gdC4pl0ZnavIz/m/2q2naFgGviTWvZEdl0QsqLVHwl5jc/KN6qeruXIfi2xxMA">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Q26r7OJSMsKaOOVeM1Q/9ZRzjC33LakGOtwjs3+hvGypVDxi9eSE/1BlGdlsOHGaYKwDCZdHVA+Z5XGxJhEJqlhQlZQRqE3TTHgX8bGDkg9RNnFOmmXpgCBniGHvgPtS">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -464,7 +464,7 @@ in&nbsp;<br>Commercial Insurance</p>
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2019 - Barrett Insurance - All Rights Reserved
+                    © Copyright 2020 - Barrett Insurance - All Rights Reserved
                 </p>
             </div>
         </div>
