--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section article content1 cid-rGLUGiirC6" id="content1-9a">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section article content1 cid-rGLUGiirC6" id="content1-9a">
     
      
 
@@ -469,7 +469,7 @@ Red Velvet Waffles&nbsp;</div></h2>
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2019 - Barrett Insurance - All Rights Reserved
+                    © Copyright 2020 - Barrett Insurance - All Rights Reserved
                 </p>
             </div>
         </div>
