--- a/ben.html
+++ b/ben.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mEXVioffyicS5jnPvL1DWjhmRx5ynzw7ym4hxDWYpZGXP26/AXCbLm4EnQJwqVtFfbnBmNEI0dHkfVHibSrCZgVE75b1mO/Hg0KZDTStTW5XLm7uR/8ArlIzIGg1i8ML">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6JcIdCAPIRH9qpIJbsb8ldinTsxxxoJAaudX9F+1CYbwxt8j5D6Ll5L54y6h2a1bvSJJ6nmS15J6L6Fq9g81mJDifKwTEQa2G/4sxWjlTiOHpVyr/43UtsK63SRDiJKg">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
