--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gTl7GVL9u9nFXhW6QAM01nY1vq04n/Cgot0orOmx3uH76cOj2jvA4O7WwsiKB4pDglJdS/8ctQGydIcS8VNsDGOf/QI4AiJuyuidPpnXn6Ox/PN99B+ReLpyxaLvMQya">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FBtFPkwU1BrvKuF8tYn8FDi+Y6kZzNWmSJNDZuqy+qCP/8ANGwICcVjJwK46PpQ2kI3EX7DVTP0E2H+4I+vtWUxi2wmVkRjm4+RckNCueRebiDRtB2L49cAoqzntwTzs">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
